--- a/Relaciones/Relaciones.tex
+++ b/Relaciones/Relaciones.tex
@@ -339,10 +339,19 @@
         % =============================
         \clearpage
         \subsection{Relación de Equivalencia}
-            Decimos que $R$ es una relación de equivalencia si es que se cumplen las 3 propiedades antes vistas
+            Decimos que $R$ es una relación de equivalencia si es que se cumplen las 3 propiedades antes vistas.
 
 
-  
+        \subsubsection{Clases de Equivalencia}
+
+            Una relación de equivalencia $R$ sobre un conjunto $A$ produce una partición
+            del conjunto en subconjuntos disjuntos, llamados \textbf{Clases de
+            Equivalencia}, cada uno de ellos formados por elementos que están
+            relacionados entre sí.
+
+            Esta partición se representa por $A \backslash R$ y se llama
+            \textbf{Conjunto Cociente}.
+
 
 
 
